# lite-runner

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  genai_runner.py  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-publish.yml  ci.yml
docs/: index.md
examples/: fake_model.py  run_example.py  run_ltx2.py  run_sweep.py
src/genai_runner/: __init__.py  backends.py  params.py  runner.py
src/lite_runner/: __init__.py  backends.py  params.py  runner.py
tests/: conftest.py  test_.py  test_backends.py  test_genai_runner.py  test_params.py  test_runner.py
