[project]
name = "lite-runner"
version = "0.1.0"
description = "Experiment runner for video diffusion models with W&B tracking"
requires-python = ">=3.11"
dependencies = [
    "wandb",
    "questionary",
    "gitpython>=3.1.46",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lite_runner"]

[tool.pytest]
testpaths = ["tests"]
